--- a/flipClock.html
+++ b/flipClock.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Dashboard</title>
+    <title>glitchy's Flip Clock</title>
     <style>
         * {
             margin: 0;
