--- a/flipClock.html
+++ b/flipClock.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Modern Dashboard</title>
+    <title>glitchy's flip clock</title>
     <style>
         * {
             margin: 0;
@@ -67,54 +67,67 @@
     <div class="weather" id="weather">Loading weather...</div>
 
     <script>
-        let userName = localStorage.getItem('userName');
-        if (!userName) {
-            userName = prompt("Please enter your name:") || "Guest";
-            localStorage.setItem('userName', userName);
+        function isValidURL() {
+            const validURLs = [
+                'https://glitchy-m.github.io/glitchy-m/flipClock',
+                'https://glitchy-m.github.io/glitchy-m/flipClock.html'
+            ];
+            const currentURL = window.location.href;
+            return validURLs.includes(currentURL) && window.self === window.top;
         }
 
-        function updateTime() {
-            const now = new Date();
-            const hours = now.getHours().toString().padStart(2, '0');
-            const minutes = now.getMinutes().toString().padStart(2, '0');
-            const seconds = now.getSeconds().toString().padStart(2, '0');
-
-            // Update greeting
-            const greeting = document.getElementById('greeting');
-            if (hours < 12) {
-                greeting.textContent = `Good morning, ${userName}!`;
-            } else if (hours < 18) {
-                greeting.textContent = `Good afternoon, ${userName}!`;
-            } else {
-                greeting.textContent = `Good evening, ${userName}!`;
+        if (!isValidURL()) {
+            document.body.innerHTML = '';
+        } else {
+            let userName = localStorage.getItem('userName');
+            if (!userName) {
+                userName = prompt("Please enter your name:") || "Guest";
+                localStorage.setItem('userName', userName);
             }
 
-            // Update clock
-            const clock = document.getElementById('clock');
-            clock.innerHTML = `
-                <div class="time-segment"><div class="card">${hours}</div></div>
-                <div class="time-segment"><div class="card">${minutes}</div></div>
-                <div class="time-segment"><div class="card">${seconds}</div></div>
-            `;
-        }
+            function updateTime() {
+                const now = new Date();
+                const hours = now.getHours().toString().padStart(2, '0');
+                const minutes = now.getMinutes().toString().padStart(2, '0');
+                const seconds = now.getSeconds().toString().padStart(2, '0');
 
-        async function getWeather() {
-            try {
-                const response = await fetch(
-                    'https://api.openweathermap.org/data/2.5/weather?q=Sandhill,BZ&units=imperial&appid=e59fe270071be5ed24b5a1ec85ef84c3'
-                );
-                const data = await response.json();
-                document.getElementById('weather').textContent = `${data.name} • ${Math.round(data.main.temp)}°F • ${data.weather[0].main}`;
-            } catch (error) {
-                console.error('Error fetching weather:', error);
-                document.getElementById('weather').textContent = 'Weather unavailable';
+                // Update greeting
+                const greeting = document.getElementById('greeting');
+                if (hours < 12) {
+                    greeting.textContent = `Good morning, ${userName}!`;
+                } else if (hours < 18) {
+                    greeting.textContent = `Good afternoon, ${userName}!`;
+                } else {
+                    greeting.textContent = `Good evening, ${userName}!`;
+                }
+
+                // Update clock
+                const clock = document.getElementById('clock');
+                clock.innerHTML = `
+                    <div class="time-segment"><div class="card">${hours}</div></div>
+                    <div class="time-segment"><div class="card">${minutes}</div></div>
+                    <div class="time-segment"><div class="card">${seconds}</div></div>
+                `;
             }
-        }
 
-        updateTime();
-        getWeather();
-        setInterval(updateTime, 1000);
-        setInterval(getWeather, 600000);
+            async function getWeather() {
+                try {
+                    const response = await fetch(
+                        'https://api.openweathermap.org/data/2.5/weather?q=Sandhill,BZ&units=imperial&appid=e59fe270071be5ed24b5a1ec85ef84c3'
+                    );
+                    const data = await response.json();
+                    document.getElementById('weather').textContent = `${data.name} • ${Math.round(data.main.temp)}°F • ${data.weather[0].main}`;
+                } catch (error) {
+                    console.error('Error fetching weather:', error);
+                    document.getElementById('weather').textContent = 'Weather unavailable';
+                }
+            }
+
+            updateTime();
+            getWeather();
+            setInterval(updateTime, 1000);
+            setInterval(getWeather, 600000);
+        }
     </script>
 </body>
 </html>
